petclinic-kube.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Pod
  metadata:
    name: petclinic
    labels:
      app.kubernetes.io/name: petclinic
      app.kubernetes.io/component: webapp
      app.kubernetes.io/part-of: petclinic
  spec:
    containers:
    - name: server
      image: mariolet/petclinic
      ports:
      - containerPort: 8080
        protocol: TCP
      resources:
        limits:
          memory: 512Mi
- apiVersion: v1
  kind: Pod
  metadata:
    name: mysql
    labels:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/component: database
      app.kubernetes.io/part-of: petclinic
  spec:
    containers:
    - name: mysql
      image: centos/mysql-57-centos7
      ports:
      - containerPort: 3306
        protocol: TCP
      resources:
        limits:
          memory: 512Mi
- kind: Service
  apiVersion: v1
  metadata:
    name: mysql
    labels:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/component: database
      app.kubernetes.io/part-of: petclinic
  spec:
    ports:
      - name: mysql
        port: 3306
        targetPort: 3360
    selector:
      app.kubernetes.io/name: mysql
      app.kubernetes.io/component: database
      app.kubernetes.io/part-of: petclinic
- kind: Service
  apiVersion: v1
  metadata:
    name: petclinic
    labels:
      app.kubernetes.io/name: petclinic
      app.kubernetes.io/component: webapp
      app.kubernetes.io/part-of: petclinic
  spec:
    ports:
      - name: web
        port: 8080
        targetPort: 8080
    selector:
      app: petclinic
      component: webapp
- kind: Ingress
  apiVersion: extensions/v1beta1
  metadata:
    name: petclinic
    annotations:
      ingress.kubernetes.io/rewrite-target: /
    labels:
      app.kubernetes.io/name: petclinic
      app.kubernetes.io/component: webapp
      app.kubernetes.io/part-of: petclinic
  spec:
    rules:
    - http:
        paths:
        - path: /petclinic
          backend:
            serviceName: petclinic
            servicePort: 8080
